--- a/interface/index.css
+++ b/interface/index.css
@@ -116,3 +116,21 @@ body {
 .footer a:hover {
     color: #52d1b2;
 }
+
+.new-log-alert {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    background-color: #d9534f; /* Vermelho para alerta */
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+    animation: fadeIn 0.5s ease-in-out;
+}
+
+@keyframes fadeIn {
+    from { opacity: 0; transform: translateY(-20px); }
+    to { opacity: 1; transform: translateY(0); }
+}
